letter spacing fix

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -32,7 +32,7 @@ p {
 h1 {
   font-size: 1.625rem;
   line-height: 2rem;
-  letter-spacing: -.02em }
+  letter-spacing: -.025em; }
 
 h2 {
   font-size: 1.5rem;
@@ -66,16 +66,14 @@ p {
 
   h1 {
     font-size: 2.75rem;
-    line-height: 3rem;
-    letter-spacing: -.75px; }
+    line-height: 3rem; }
 }
 
 @include lg {
 
   h1 {
     font-size: 3.75rem;
-    line-height: 4rem;
-    letter-spacing: -1px; }
+    line-height: 4rem; }
 
   p {
     font-size: 1.375rem;
